hphp/test/slow/hack_mode/2204.php.expectf
Fatal error: A hack source file cannot contain '?>'. in %s/test/slow/hack_mode/2204.php on line 4